--- a/src/LambdaFlowFunctions/LambdaFlowFunctions.csproj
+++ b/src/LambdaFlowFunctions/LambdaFlowFunctions.csproj
@@ -12,6 +12,7 @@
     <PackageReference Include="Amazon.Lambda.Core" Version="2.7.0" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="9.0.8" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="9.0.8" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
   </ItemGroup>
 
 </Project>
